<resources>
    <string name="app_name">Template</string>
    <string name="authenticationfragment">AuthenticationFragment</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
</resources>